shell: (mobile) fixed label alignment for nav icons

--- a/pkg/shell/switcher.less
+++ b/pkg/shell/switcher.less
@@ -483,7 +483,7 @@
         .list-group-item-value {
             font-size: 12px !important;
             line-height: 2 !important;
-            margin-top: -6px; // Half font size, to offset double line-height
+            margin: -6px auto 0; // Half font size, to offset double line-height
         }
 
         #host-nav-link .list-group-item-value {
